--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN = MTAwOTc3Mzc3MTcyNjUzMjY4OQ.Gb1JMM.-E90114euQhUErZpon9qh894KN49tv0y3fpY88
+TOKEN = MTAwOTc3Mzc3MTcyNjUzMjY4OQ.G2A0qf.RNEY0BrhsskKJXiNPHqKjgi5hirennxLGg4vQQ
 PREFIX = !
 TESTSERVER = 1009773548597940284
