--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN = MTAwOTc3Mzc3MTcyNjUzMjY4OQ.G2A0qf.RNEY0BrhsskKJXiNPHqKjgi5hirennxLGg4vQQ
+TOKEN = MTAwOTc3Mzc3MTcyNjUzMjY4OQ.GaGvnh.G58pNsf_5YmlCbu7N87c55-VHurM8KFTSKgIeo
 PREFIX = !
 TESTSERVER = 1009773548597940284
